--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href='https://fonts.googleapis.com/css?family=Akronim' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,100&display=swap" rel="stylesheet">
     <style>
         body {
-             font-family: 'Akronim';font-size: 22px;
+            font-family: 'IBM Plex Mono', monospace;
+            font-size: 22px;
             background: black;
             color: #00ff00;
             background-image:url("tenor.gif");
