--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'IBM Plex Mono', monospace;
-            font-size: 12px;
+           font-family: 'Press Start 2P', cursive;
+            font-size: 40px;
             background: black;
             color: #00ff00;
             background-image:url("tenor.gif");
@@ -22,7 +22,12 @@
         * {
             box-sizing: border-box;
         }
-
+h1{
+    max-width: 700px;
+     text-align: center;
+     margin: 0 auto;
+     text-shadow: lawngreen 10px 10px 10px;
+}
         .openChatBtn {
             background-color: rgb(123, 28, 179);
             color: white;
@@ -99,7 +104,8 @@
     <h1>HELLO WORLD</br>
         CHAT WITH ME 
     </h1>
-    <h1 id="noemi"></h1>
+    <br>
+    <h1 id="texthere"></h1>
     <button class="openChatBtn" onclick="openForm()">Chat</button>
     <div class="openChat">
         <form>
@@ -122,7 +128,9 @@
         function handleSubmit(event) {
                 event.preventDefault();
                 let userMessage = document.querySelector("#searchinput").value;
-                document.querySelector("#noemi").innerHTML = `${userMessage}`;
+                document.querySelector("#texthere").innerHTML = `${userMessage}`;
+                document.querySelector("h1").innerHTML = ` `;
+
             }
 
           
