--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
 <body>
     <h1>😈🤖👽👾 HI 🧠👄🐍🐊</br>
         I'm a non-binary computer ⚧ <br>
-        chat with me
+        Welcome in this virtual room.
+    ‧͙*･༓ It's a whole new world ༓･*˚⁺‧͙
+        
     </h1>
     <br>
     <h1 id="texthere"></h1>
