--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <body>
     <h1>😈🤖👽👾 HI 🧠👄🐍🐊</br>
         I'm a non-binary computer ⚧ <br>
-        Welcome in this virtual room.
+        Welcome to this virtual room.
     ‧͙*･༓ It's a whole new world ༓･*˚⁺‧͙
         
     </h1>
