--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             background-size: 500px;
 
         }
+
+    .main {
+         text-indent: 20px;
+    }
 .box {
 	display: flex;
     height: 100%;
@@ -152,7 +156,7 @@
 </head>
 
 <body>
-    <h1>😈🤖👽👾 HI 🧠👄🐍🐊</br>
+    <h1 class = "main">😈🤖👽👾 HI 🧠👄🐍🐊</br>
         I'm a non-binary computer ⚧ <br>
         Welcome to this virtual room.
     ‧͙*･༓ It's a whole new world ༓･*˚⁺‧͙
