--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             background-position-y: top;
             background-repeat: no-repeat;
             background-size: 500px;
+            text-indent: 50px;
 
         }
 
@@ -159,7 +160,7 @@
     <h1 class = "main">😈🤖👽👾 HI 🧠👄🐍🐊</br>
         I'm a non-binary computer ⚧ <br>
         Welcome to this virtual room.
-    ‧͙*･༓ It's a whole new world ༓･*˚⁺‧͙
+    ‧*･༓ It's a whole new world ༓･*˚⁺‧
         
     </h1>
     <br>
