--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             background-position-y: top;
             background-repeat: no-repeat;
             background-size: 500px;
-            text-indent: 50px;
 
         }
 
     .main {
-         text-indent: 20px;
+    line-height: 2;
     }
 .box {
 	display: flex;
@@ -159,8 +158,8 @@
 <body>
     <h1 class = "main">😈🤖👽👾 HI 🧠👄🐍🐊</br>
         I'm a non-binary computer ⚧ <br>
-        Welcome to this virtual room.
-    ‧*･༓ It's a whole new world ༓･*˚⁺‧
+        Welcome to this virtual room. <br>
+     ‧*･༓ It's a whole new world ༓･*˚⁺‧ 
         
     </h1>
     <br>
